# a-json-schema-builder-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh  scaffold.yaml
include/a-json-schema-builder-library/: ajsb.h
src/: ajsb.c
tests/: CMakeLists.txt
tests/src/: test_ajsb.c
